<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aaff8800"
    android:gravity="start"
    android:orientation="vertical"
    tools:ignore="HardcodedText,SpUsage">

    <LinearLayout
        android:id="@+id/image_group_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="这是4只直猫,这是4只猫,这是4只猫"
            android:textSize="12dp"
            android:textStyle="bold"
            android:transitionName="@string/transition_group_text" />

        <RelativeLayout
            android:id="@+id/group_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/group_image_1"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placekitten_1"
                android:transitionName="@string/transition_image_1" />

            <ImageView
                android:id="@+id/group_image_2"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_toRightOf="@id/group_image_1"
                android:scaleType="centerCrop"
                android:src="@drawable/placekitten_2"
                android:transitionName="@string/transition_image_2" />

            <ImageView
                android:id="@+id/group_image_3"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_below="@id/group_image_1"
                android:scaleType="centerCrop"
                android:src="@drawable/placekitten_3"
                android:transitionName="@string/transition_image_3" />

            <ImageView
                android:id="@+id/group_image_4"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_below="@id/group_image_2"
                android:layout_toRightOf="@id/group_image_3"
                android:scaleType="centerCrop"
                android:src="@drawable/placekitten_4"
                android:transitionName="@string/transition_image_4" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="6dp"
        android:background="#888888" />

    <LinearLayout
        android:id="@+id/image_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="这是1只猫,这是1只猫,这是1只猫"
            android:textSize="12dp"
            android:textStyle="bold"
            android:transitionName="@string/transition_image_text" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pic_1"
            android:transitionName="@string/transition_image" />

    </LinearLayout>

</LinearLayout>