<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    tools:ignore="HardcodedText,SpUsage">

    <Button
        android:id="@+id/btn_share_all_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="过渡动画指定所有元素"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="6dp"
        android:background="#888888" />

    <LinearLayout
        android:id="@+id/image_parent"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pic_1"
            android:transitionName="@string/transition_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="过渡动画指定这只猫！"
            android:textSize="16dp"
            android:transitionName="@string/transition_image_text" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="6dp"
        android:background="#888888" />

    <LinearLayout
        android:id="@+id/image_group_parent"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/group_image"
            android:layout_width="wrap_content"
            android:layout_height="128dp">

            <ImageView
                android:id="@+id/group_image_1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placekitten_1"
                android:transitionName="@string/transition_image_1" />

            <ImageView
                android:id="@+id/group_image_2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_toRightOf="@id/group_image_1"
                android:scaleType="centerCrop"
                android:src="@drawable/placekitten_2"
                android:transitionName="@string/transition_image_2" />

            <ImageView
                android:id="@+id/group_image_3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_below="@id/group_image_1"
                android:scaleType="centerCrop"
                android:src="@drawable/placekitten_3"
                android:transitionName="@string/transition_image_3" />

            <ImageView
                android:id="@+id/group_image_4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_below="@id/group_image_2"
                android:layout_toRightOf="@id/group_image_3"
                android:scaleType="centerCrop"
                android:src="@drawable/placekitten_4"
                android:transitionName="@string/transition_image_4" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="过渡动画指定这4只猫！"
            android:textSize="16dp"
            android:transitionName="@string/transition_group_text" />

    </LinearLayout>

</LinearLayout>