<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="liuwei.android.animation.demo.UIColor" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        app:backgroundColor="@{data.background}"
        tools:ignore="HardcodedText,SpUsage">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="过渡动画指定这4只猫！"
            android:textSize="12dp"
            android:transitionName="@string/transition_group_text" />

        <RelativeLayout
            android:id="@+id/group_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/group_image_1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placekitten_1"
                android:transitionName="@string/transition_image_1" />

            <ImageView
                android:id="@+id/group_image_2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_toRightOf="@id/group_image_1"
                android:scaleType="centerCrop"
                android:src="@drawable/placekitten_2"
                android:transitionName="@string/transition_image_2" />

            <ImageView
                android:id="@+id/group_image_3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_below="@id/group_image_1"
                android:scaleType="centerCrop"
                android:src="@drawable/placekitten_3"
                android:transitionName="@string/transition_image_3" />

            <ImageView
                android:id="@+id/group_image_4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_below="@id/group_image_2"
                android:layout_toRightOf="@id/group_image_3"
                android:scaleType="centerCrop"
                android:src="@drawable/placekitten_4"
                android:transitionName="@string/transition_image_4" />

        </RelativeLayout>

    </LinearLayout>

</layout>